disable cologne/zoomstack

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       - db
     environment:
       - EXTERNAL_URL=http://localhost:7080/rest/services
-      - ENABLE_ZOOMSTACK=true
-      - ENABLE_COLOGNE=true
+      - ENABLE_ZOOMSTACK=false
+      - ENABLE_COLOGNE=false
       # Enable the following variable, if the cologne_lod2 data is available in a separate PostgreSQL instance;
       # in this case comment out "#/services/db" and "#/services/ldproxy/depends_on"
       # - DB_HOST=host.docker.internal
