--- a/entities/instances/features/withTiles/providers/vineyards.yml
+++ b/entities/instances/features/withTiles/providers/vineyards.yml
@@ -74,8 +74,12 @@ types:
         type: DATE
         role: PRIMARY_INSTANT
         label: Validity date
+        constraints:
+          required: true
       geometry:
         sourcePath: geom
         type: GEOMETRY
         role: PRIMARY_GEOMETRY
         geometryType: MULTI_POLYGON
+        constraints:
+          required: true
